# artsetforme_public

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  main.py  manage.py  pyproject.toml  requirements.txt
artsetforme/: asgi.py  urls.py  wsgi.py
artsetforme/settings/: __init__.py
artsetforme/staticfiles/css/: styles.css
artsetforme/staticfiles/js/: scripts.js
backoffice/: admin.py  apps.py  models.py  signals.py  tests.py
backoffice/migrations/: 0001_initial.py  0002_newletter.py  0003_newletter_attachement.py  0004_auto_20210927_0905.py  0005_alter_newletter_subject_2.py  0006_rename_newletter_newsletter.py  0007_auto_20210928_0909.py  0008_auto_20210928_1042.py  0009_auto_20210928_1103.py  0010_auto_20210928_1121.py  0011_auto_20210928_1124.py  0012_auto_20210928_1132.py  0013_auto_20210928_1151.py  0014_auto_20210928_1154.py  0015_auto_20210928_1156.py  0016_auto_20210928_1209.py  0017_auto_20210928_1210.py  0018_auto_20210929_1112.py  0019_auto_20211010_1210.py
backoffice/script/: get_mailing_list.py
blog/: filters.py  models.py  signals.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/script/: blog_notification.py
download/: admin.py  models.py  tests.py  urls.py  views.py
download/migrations/: 0001_initial.py  0002_alter_downloadable_file.py  0003_downloadable_short_description.py  0004_alter_downloadable_short_description.py
nginx/: nginx-setup.conf
presentation/: tests.py  views.py
user/: forms.py  models.py  tests.py  views.py
user/migrations/: 0001_initial.py
user/templates/user/: login.html  (+7 more)
(+21 files in other folders)
